feat(Tokenizer): 입력 문자열을 구분자로 분리하는 기능 구현